--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#336699</color>
-    <color name="colorPrimaryDark">#24496D</color>
+    <color name="colorPrimary">#5A3399</color>
+    <color name="colorPrimaryDark">#24286D</color>
     <color name="colorGreen">#8BC34A</color>
-    <color name="colorAccent">#336699</color>
+    <color name="colorAccent">#339979</color>
     <color name="colorGray">#9E9E9E</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBox">#EAEAEA</color>
